Sep 01 2007  devel  Merged 2 more patches from Jean to add network expiration
                     and memory limiting for very small-resource platforms.
Aug 28 2007  devel  Merged patch from Jean Tourrilhes to change how logging
                     handles temp files
Aug 24 2007  devel  Added iwl4965 source
                    Fixed bringing down interfaces during config tests
Aug 18 2007  devel  Rewrote 'kismet' wrapper script to be a C program which
                     properly handles stderr/stdout and queues error output
                     for replay on exit, also handles timing on long-startup
                     sources (like darwin warnings) properly
Aug 18 2007  devel  Aliased b43/b43legacy for broadcom driver split
Aug 13 2007  devel  Aliased iwl3945 for ipw3945
Aug 03 2007  devel  Tweaks to Darwin source handling
Jul 25 2007  devel  First pass at battery support for Darwin
Jul 24 2007  devel  Backported WEP display from newcore to only show WEP if no
                     expanded crypto options are available
                    Fixed lurking bug where networks with WPA improperly got
                     WEP40 set as well
Jul 23 2007  devel  Added madwifi-ng support for Linux-2.4
                    Added vap teardown code for madwifi-ng
                    Updated README
Jul 22 2007  devel  Revamped channel fetching system to use last ack'd set, rather
                     than fetching live.  This should reduce the load by 4 or 5
                     syscalls per packet, a good thing.  (And enable channel display
                     on Darwin capture sources)
                    Throttled channel control down to the rate at which it can 
                     acknowledge that a set succeeded
Jul 21 2007  devel  Added Darwin card type detection to properly use Broadcom cards
                    Added Darwin channel control
Jul 04 2007  devel  Added beginnings of Darwin support for OSX-Intel (atheros)